@@ -1,4 +1,4 @@
-## $Id: Makefile.am,v 1.11 2011/01/06 01:08:52 rlk Exp $
+## $Id: Makefile.am,v 1.12 2011/01/06 01:28:59 rlk Exp $
 ## Copyright (C) 2008 Robert Krawitz
 ##
 ## This program is free software; you can redistribute it and/or modify
@@ -59,6 +59,7 @@ pkgxmldata_DATA =				\
 	pro_pigment.xml				\
 	pro_ultrachrome.xml			\
 	pro_ultrachrome_k3.xml			\
+	pro_ultrachrome_k34.xml			\
 	pro_ultrachrome_k3v.xml			\
 	pro_ultrachrome_k3v4.xml		\
 	standard.xml				\
