@@ -284,7 +284,9 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        EPSON ME Office 620F
        Epson Stylus Pro 3885
        Epson Stylus Pro 7700 (EXPERIMENTAL)
+       Epson Stylus Pro 7890 (EXPERIMENTAL)
        Epson Stylus Pro 9700 (EXPERIMENTAL)
+       Epson Stylus Pro 9890 (EXPERIMENTAL)
 
   2) Add additional photo modes to Canon inkjet printers.
 
